Entidades relacionadas CORREGIDAS nuevamente junto con la cadena de conección, Inyección de dependencias y Migración

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "conn": "Data Source=PC-IGABRIEL; Initial Catalog=TReservacionDb; Integrated Security=True;"
+  },
   "AllowedHosts": "*"
 }
