--- a/appsettings.json
+++ b/appsettings.json
@@ -5,8 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": {
-    "conn": "Data Source=PC-IGABRIEL; Initial Catalog=TReservacionDb; Integrated Security=True;"
-  },
+    "ConnectionStrings": {
+        "conn": "Data Source=COMPU\\SQLEXPRESS; Database=TReservationDB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+
+    },
   "AllowedHosts": "*"
 }
