Cadena de conexion a base de datos remota

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,9 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-    "ConnectionStrings": {
-        "conn": "Data Source=COMPU\\SQLEXPRESS; Database=TReservationDB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+  "ConnectionStrings": {
+    "conn": "workstation id=TReservationDB.mssql.somee.com;packet size=4096;user id=treservation_SQLLogin_1;pwd=g4zczka6gu;data source=TReservationDB.mssql.somee.com;persist security info=False;initial catalog=TReservationDB;TrustServerCertificate=True"
 
-    },
+  },
   "AllowedHosts": "*"
 }
