Reconstrucción de login y permisos.

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "conn": "workstation id=TReservationDB.mssql.somee.com;packet size=4096;user id=treservation_SQLLogin_1;pwd=g4zczka6gu;data source=TReservationDB.mssql.somee.com;persist security info=False;initial catalog=TReservationDB;TrustServerCertificate=True"
+    "conn": "Data Source=PC-IGABRIEL;Initial Catalog=TReservation04db;Integrated Security=True"
 
   },
   "AllowedHosts": "*"
