Base de datos remoto.

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "conn": "Data Source=PC-IGABRIEL;Initial Catalog=TReservation010db;Integrated Security=True"
+    "conn": "workstation id=TRerservationDb.mssql.somee.com;packet size=4096;user id=ingridgabriel_SQLLogin_1;pwd=lyro9bm4bu;data source=TRerservationDb.mssql.somee.com;persist security info=False;initial catalog=TRerservationDb;TrustServerCertificate=True"
 
   },
   "AllowedHosts": "*"
