--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "conn": "workstation id=TRerservationDb.mssql.somee.com;packet size=4096;user id=ingridgabriel_SQLLogin_1;pwd=lyro9bm4bu;data source=TRerservationDb.mssql.somee.com;persist security info=False;initial catalog=TRerservationDb;TrustServerCertificate=True"
+    "conn": "workstation id=TRerservationdb.mssql.somee.com;packet size=4096;user id=ingridgabriel_SQLLogin_1;pwd=lyro9bm4bu;data source=TRerservationdb.mssql.somee.com;persist security info=False;initial catalog=TRerservationdb;TrustServerCertificate=True"
 
   },
   "AllowedHosts": "*"
