--- a/T-RESERVATION.AccesoDatos/T-RESERVATION.AccesoDatos.csproj
+++ b/T-RESERVATION.AccesoDatos/T-RESERVATION.AccesoDatos.csproj
@@ -1,10 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>T_RESERVATION.AccesoDatos</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.29"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.29"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.29"/>
+  </ItemGroup>
 </Project>
