--- a/T-RESERVATION.LogicaNegocio/T-RESERVATION.LogicaNegocio.csproj
+++ b/T-RESERVATION.LogicaNegocio/T-RESERVATION.LogicaNegocio.csproj
@@ -6,8 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.29"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.29"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.29"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.29" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.29" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.29" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\T-RESERVATION.AccesoDatos\T-RESERVATION.AccesoDatos.csproj" />
   </ItemGroup>
 </Project>
