--- a/T-RESERVATION.LogicaNegocio/T-RESERVATION.LogicaNegocio.csproj
+++ b/T-RESERVATION.LogicaNegocio/T-RESERVATION.LogicaNegocio.csproj
@@ -12,5 +12,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\T-RESERVATION.AccesoDatos\T-RESERVATION.AccesoDatos.csproj" />
+    <ProjectReference Include="..\T-RESERVATION.EntidadesNegocio\T-RESERVATION.EntidadesNegocio.csproj" />
   </ItemGroup>
 </Project>
